--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
+    "ngx-infinite-scroll": "^13.0.2",
+    "ngx-spinner": "^14.0.0",
     "nodemailer": "^6.7.5",
     "rxjs": "~7.4.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.4.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
