--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles/styles.scss"
+              "src/styles/styles.scss",
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
             ],
             "scripts": [
             ]
@@ -100,7 +101,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles/styles.scss"
+              "src/styles/styles.scss",
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
             ],
             "scripts": [
             ]
@@ -108,6 +110,5 @@
         }
       }
     }
-  },
-  "defaultProject": "lawrence-dovin-portfolio"
+  }
 }
