--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.0.3",
     "@angular/platform-browser-dynamic": "^14.0.3",
     "@angular/router": "^14.0.3",
+    "angular-cli-ghpages": "^0.1.7",
     "bootstrap-icons": "^1.8.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
